little bit further with art and debugg

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
                 <button id="collapse-btn" class="collapse-btn"><img src="Resources/collapse_filler.svg" alt="Collapse"></button>
             </div>
             <div class="sidebar-tabs">
-                <a href="#" class="active" data-panel="sidebar-panel-text"><span>Text Media</span></a>
-                <a href="#" data-panel="sidebar-panel-image"><span>Image Media</span></a>
-                <a href="#" data-panel="sidebar-panel-audio"><span>Audio Media</span></a>
+                <a href="#" class="active" data-panel="sidebar-panel-text">
+                    <div class="tab-content"><img src="Resources/text_icon.svg" alt="Text"></div>
+                </a>
+                <a href="#" data-panel="sidebar-panel-image">
+                    <div class="tab-content"><img src="Resources/image_icon.svg" alt="Image"></div>
+                </a>
+                <a href="#" data-panel="sidebar-panel-audio">
+                    <div class="tab-content"><img src="Resources/audio_icon.svg" alt="Audio"></div>
+                </a>
             </div>
             <div class="sidebar-panel-container">
                 <div id="sidebar-panel-text" class="sidebar-panel active-panel">
