--- a/podcast_visualization_plan.html
+++ b/podcast_visualization_plan.html
@@ -153,7 +153,7 @@
                 <li><strong>Location:</strong> A persistent sidebar on the left side of the UI.</li>
                 <li><strong>Tabs:</strong> The sidebar will have tabs on the far left for 'Image', 'Text', and 'Audio'.</li>
                 <li><strong>File Caching:</strong> Each tab will display files of its type that are currently cached in the project media.</li>
-                <li><strong>Generate New:</strong> At the end of the list of cached files in each tab, a 'Generate New' button with a black plus icon will be available to create new assets.</li>
+                <li><strong>Generate/Import:</strong> The button for adding new assets will be split into two halves. One half will feature a plus icon for importing media, while the other half will have a media-specific icon to generate new media for that tab.</li>
             </ul>
             <h3>Highlight Tool</h3>
             <div class="asset-usage">
@@ -165,6 +165,7 @@
             <ul>
                 <li><strong>Selection:</strong> Users can click and drag to select any portion of the transcript text.</li>
                 <li><strong>Highlighting:</strong> Upon selection, the text will be visually highlighted (e.g., with a yellow background) to indicate that it has been chosen for image generation.</li>
+                <li><strong>Inline Generation Popout:</strong> An inline popout will appear to the left of the highlighted text, featuring two clickable icon tabs: one for generating images and one for generating audio.</li>
                 <li><strong>Deselection:</strong> Clicking on a highlighted section will remove the highlight.</li>
                 <li><strong>Generate Button:</strong> A "Generate New Images" button will be available. When clicked, all highlighted text segments are collected and sent to the image generation module.</li>
                 <li><strong>Note:</strong> The highlighted text is linked to whichever "Generate New" button is clicked. This allows for context-sensitive image generation depending on the user's workflow.</li>
@@ -198,7 +199,7 @@
                 <li><strong>Location:</strong> A persistent sidebar on the left side of the UI.</li>
                 <li><strong>Tabs:</strong> The sidebar will have tabs on the far left for 'Image', 'Audio', 'Text', and 'Video'.</li>
                 <li><strong>File Caching:</strong> Each tab will display files of its type that are currently cached in the project media.</li>
-                <li><strong>Generate New:</strong> At the end of the list of cached files in each tab, a 'Generate New' button with a black plus icon will be available to create new assets.</li>
+                <li><strong>Generate/Import:</strong> The button for adding new assets will be split into two halves. One half will feature a plus icon for importing media, while the other half will have a media-specific icon to generate new media for that tab.</li>
             </ul>
             <h3>Highlight Tool</h3>
             <div class="asset-usage">
@@ -210,6 +211,7 @@
             <ul>
                 <li><strong>Selection:</strong> Users can click and drag to select any portion of the transcript text.</li>
                 <li><strong>Highlighting:</strong> Upon selection, the text will be visually highlighted (e.g., with a yellow background) to indicate that it has been chosen for audio generation.</li>
+                <li><strong>Inline Generation Popout:</strong> An inline popout will appear to the left of the highlighted text, featuring two clickable icon tabs: one for generating images and one for generating audio.</li>
                 <li><strong>Deselection:</strong> Clicking on a highlighted section will remove the highlight.</li>
                 <li><strong>Generate Button:</strong> A "Generate New Audio" button will be available. When clicked, all highlighted text segments are collected and sent to the audio generation module.</li>
                 <li><strong>Note:</strong> The highlighted text is linked to whichever "Generate New" button is clicked. This allows for context-sensitive audio generation depending on the user's workflow.</li>
