Added environment for extensive testing

--- a/do not delete/index.html
+++ b/do not delete/index.html
@@ -73,7 +73,9 @@
             </div>
         <main class="main-content">
             <div id="transcript-view" class="view active-view"></div>
-            <div id="timeline-view" class="view"></div>
+            <div id="timeline-view" class="view">
+                <h2>Timeline view is under construction.</h2>
+            </div>
             <div id="generative-options-pt1-view" class="view"></div>
             <div id="generative-options-pt2-view" class="view"></div>
         </main>
