fully setup python environment for debuggin or testing of any element

--- a/do not delete/index.html
+++ b/do not delete/index.html
@@ -47,8 +47,8 @@
                 <a href="#" class="active" data-panel="sidebar-panel-text">
                     <div class="tab-content"><img src="Resources/text_icon.svg" alt="Text"></div>
                 </a>
-                <a href="#" data-panel="sidebar-panel-image">
-                    <div class="tab-content"><img src="Resources/image_icon.svg" alt="Image"></div>
+                <a href="#" data-panel="sidebar-panel-image" aria-label="Image">
+                    <div class="tab-content"><img src="Resources/image_icon.svg" alt=""></div>
                 </a>
                 <a href="#" data-panel="sidebar-panel-audio">
                     <div class="tab-content"><img src="Resources/audio_icon.svg" alt="Audio"></div>
@@ -62,7 +62,7 @@
                 </div>
                 <div id="sidebar-panel-image" class="sidebar-panel">
                     <button class="add-media-btn">
-                        <img src="Resources/add_icon.svg" alt="Add Image Media">
+                        <img src="Resources/add_icon.svg" alt="Add Media">
                     </button>
                 </div>
                 <div id="sidebar-panel-audio" class="sidebar-panel">
